# ConsoleGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp  txt
Classes/AttackedObj/: AttackedObj.cpp  AttackedObj.h
Classes/BuilderField/: BuilderField.cpp  BuilderField.h
Classes/Cells/: ICell.h
Classes/Cells/EndCell/: EndCell.cpp
Classes/Cells/NormalCell/: NormalCell.cpp  NormalCell.h
Classes/Console/: Console.cpp  Console.h
Classes/Controler/: Controler.cpp  Controler.h  Controler.inl  SetKeys.h
Classes/Event/: Event.cpp  Event.h
Classes/Field/: Field.cpp  Field.h
Classes/Game/: Game.cpp  Game.h  Game.inl  StateGame.h
Classes/Game/Rule/: GenerationLevel.h  RWinAndLose.h  RuleSetLocatedGameObj.h
Classes/GameObject/: GameObject.cpp  GameObject.h  TypeGameObj.h
Classes/Logging/Logger/: Logger.cpp  Logger.h
Classes/Logging/Logs/: ILog.cpp  ILog.h
Classes/Logging/Logs/ConsoleLog/: ConsoleLog.cpp  ConsoleLog.h
Classes/Logging/Logs/FileLog/: FileLog.cpp  FileLog.h
Classes/Logging/Observable/: Observable.cpp  Observable.h
Classes/View/ViewCell/: ViewCell.cpp  ViewCell.h
Classes/View/ViewField/: ViewField.cpp  ViewField.h
Classes/View/ViewGame/: ViewGame.cpp  ViewGame.h  ViewGame.inl
Classes/СellСontents/: IAutonomy.cpp  IAutonomy.h  LocatedObject.h
Classes/СellСontents/Items/: IItem.cpp  IItem.h
Classes/СellСontents/Items/Croissant/: Croissant.cpp  Croissant.h
Classes/СellСontents/Items/Shield/: Shield.cpp  Shield.h
Classes/СellСontents/Items/Sword/: Sword.cpp  Sword.h
Classes/СellСontents/Сreatures/: ICreature.cpp  ICreature.h
Classes/СellСontents/Сreatures/Enemies/CleverAlien/: CleverAlien.cpp  CleverAlien.h
Classes/СellСontents/Сreatures/Enemies/HorizontalSkeleton/: HorizontalSkeleton.cpp  HorizontalSkeleton.h
Classes/СellСontents/Сreatures/Enemies/VerticalScorpion/: VerticalScorpion.cpp  VerticalScorpion.h
Classes/СellСontents/Сreatures/Player/: Player.cpp  Player.h
report/Lab1/: 0382_OOP_Azarov_MS_lab1.odt
report/Lab2/: 0382_OOP_Azarov_MS_lab2.odt
report/Lab3/: 0382_OOP_Azarov_MS_lab3.odt  Untitled Diagram (3).drawio
report/Lab4/: 0382_OOP_Azarov_MS_lab4.odt  Untitled Diagram (7).drawio
report/Lab5/: 0382_OOP_Azarov_MS_lab5.odt
